2011-09-13 Roman
- FIX:Archive.FSArch: Fast set bits calc algoritm using for align to dwords (32 bits) memory buffer's blocks is fixed.


2011-09-12 Roman
- UI.Vision: ScrollArea is added to project's and item's main tab of properties for work on N800.
    Default size to project's and item's properties window is set 800x600.
- Archive: Send time label is made for archive's values table for display local time on remote station.
- !!:FIX:Archive.FSArch: Store "double" value into LE format on ARM is fixed.
    Use function TSYS::getUnalign32() for get dwords to fast calc value offset algorithm to prevent errors on ARM.
    Codepage width into Plain messages archive is expanded to 99 symbols, from 9.
- FIX:DAQ.OPC_UA: Input request counter is fixed for OPC UA protocol.
- FIX:Transport.SSL, Transport.Serial: Return negative result is prevented for output transport messIO() function.
    Take place on multiply connections to serial devices.


2011-09-09 Roman
- FIX:DAQ.ModBus: Regular expression is fixed for sintax higlight to register address pair.
- UI.QTCfg, UI.Vision: Input dialog's size is set to limit 800x600.
- UI.Vision: Selected widgets list separator is replaced from ";" to "; " to correct display into dialogs.


2011-09-08 Roman
- DAQ.ICP_DAS: Separated include directory for ARM controllers is added "include_arm".


2011-09-07 Roman
- SYS, DAQ.OPC_UA: To and from standard little-endian FloatPoint variant convertion functions is added:
    floatLE(), floatLErev(), doubleLE(), doubleLErev().
- FIX:DAQ.Siemens: Into Libnodave file nodave.h #pragma pack(1) is replaced to #pragma pack(push,1) ... #pragma pack(pop).
- SYS: GLibC version for EDEADLK processing hack is rised to 2.4 and features.h include for correct GLibC version check everywhere.
- SYS, UI.VCAEngine: EDEADLK processing hack is added for pthread_rdlock_wrlock() for fix GLibC 2.3.2 (< 2.5).
- !:SYS: Set DB to "<cvf>" for load only from config file for all OpenSCADA stored nodes.